--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,6 +1,6 @@
 ---
-title: Introduction
-description: 'Welcome to the home of your new documentation'
+title: Introduction to Learning Management System 1
+description: "Welcome to the home of your new documentation"
 ---
 
 <img
