--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,5 +1,5 @@
 ---
-title: Introduction to Learning Management System 1
+title: Introduction to LMS written in rust 
 description: "Welcome to the home of your new documentation"
 ---
 
