--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,6 +1,6 @@
 ---
 title: Introduction to LMS written in rust 
-description: "Welcome to the home of your new documentation"
+description: "Welcome to the home of your new documentation anh Trường"
 ---
 
 <img
